fix: result cards action styling on mobile

--- a/src/components/ResultCards/ResultCards.module.scss
+++ b/src/components/ResultCards/ResultCards.module.scss
@@ -101,6 +101,6 @@
 	}
 
 	.footer {
-		gap: var(--s-1);
+		gap: var(--s-3);
 	}
 }
